--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/node": "^16.18.34",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
+    "echarts": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-echarts": "^0.1.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/echarts": "^4.9.18"
   }
 }
