--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-echarts": "^0.1.1",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
